--- a/CustomDialog/Views/GeneralView.axaml
+++ b/CustomDialog/Views/GeneralView.axaml
@@ -3,8 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:CustomDialog.ViewModels"
+             xmlns:views="using:CustomDialog.Views"
              xmlns:models="using:CustomDialog.Models"
-             xmlns:interaction="using:CustomDialog.Models.Interactions"
+             xmlns:nodes="clr-namespace:CustomDialog.Models.Nodes"
              mc:Ignorable="d"
              d:DesignWidth="800"
              d:DesignHeight="450"
@@ -27,17 +28,20 @@
               Background="DarkGray">
             <!-- Sidebar (Tree) -->
             <ScrollViewer VerticalScrollBarVisibility="Auto"
-                          Grid.Column="0">
+                          HorizontalScrollBarVisibility="Auto"
+                          Grid.Column="0"
+                          MaxWidth="200">
                 <TreeView ItemsSource="{Binding Nodes}"
                           SelectionMode="Single"
-                          SelectionChanged="TreeView_OnSelectionChanged">
+                          SelectionChanged="TreeView_OnSelectionChanged"
+                          Margin="0,0,5,0">
                     <TreeView.DataTemplates>
                         
-                        <TreeDataTemplate DataType="models:Node" ItemsSource="{Binding SubNodes}">
+                        <TreeDataTemplate DataType="nodes:Node" ItemsSource="{Binding SubNodes}">
                             <TextBlock Text="{Binding Title}"/>
                         </TreeDataTemplate>
                         
-                        <TreeDataTemplate DataType="models:ClickableNode">
+                        <TreeDataTemplate DataType="nodes:ClickableNode">
                             <Border Height="20"
                                     Margin="5"
                                     Background="Transparent">
@@ -54,15 +58,15 @@
                     <TreeView.Styles>
                         <Style Selector="TreeViewItem">
                             <Setter Property="IsExpanded" Value="True" />
-                            <Setter Property="(interaction:TreeViewItemInteraction.ListenToExpanded)"
-                                    Value="True" />
                         </Style>
                     </TreeView.Styles>
                 </TreeView>
             </ScrollViewer>
             <!-- Main area -->
             <Border Grid.Column="1"
-                    Background="LightGray"/>
+                    Background="LightGray">
+                <views:DirectoryView Name="MainBody" />
+            </Border>
         </Grid>
     </Grid>
     
