Async display + header base layout

--- a/CustomDialog/App.axaml
+++ b/CustomDialog/App.axaml
@@ -12,5 +12,6 @@
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
+        <StyleInclude Source="Templated Controls/HoverButton.axaml" />
     </Application.Styles>
 </Application>
