--- a/CustomDialog/Views/DirectoryView.axaml
+++ b/CustomDialog/Views/DirectoryView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:CustomDialog.ViewModels"
-             xmlns:models="using:CustomDialog.Models"
+             xmlns:tc="using:CustomDialog.Templated_Controls"
              mc:Ignorable="d"
              d:DesignWidth="800"
              d:DesignHeight="450"
@@ -14,13 +14,23 @@
         <vm:DirectoryViewModel/>
     </Design.DataContext>
     
-    <Border Background="RoyalBlue"
-            Margin="20"
-            CornerRadius="20">
-        <TextBlock Text="{Binding Text}"
-                   Name="CustomTextBlock"
-                   Foreground="White"
-                   Margin="30"/>
-    </Border>
+    <Grid RowDefinitions="Auto, *">
+        <Border Grid.Row="1"
+                Background="RoyalBlue"
+                Margin="5"
+                CornerRadius="10">
+            <TextBlock Text="{Binding Text}"
+                       Name="CustomTextBlock"
+                       Foreground="White"
+                       Margin="30"/>
+        </Border>
+        <Border Grid.Row="0"
+                Background="Crimson"
+                Margin="5,0,0,0"
+                CornerRadius="10">
+            <StackPanel>
+            </StackPanel>
+        </Border>
+    </Grid>
     
 </UserControl>
