--- a/CustomDialog/Templated Controls/HeaderButton.axaml
+++ b/CustomDialog/Templated Controls/HeaderButton.axaml
@@ -5,27 +5,33 @@
         <Border Background="RoyalBlue"
                 Padding="10">
             <Border Background="White">
-                <controls:HoverButton MaxWidth="20" />
+                <controls:HeaderButton MaxWidth="20" />
             </Border>
         </Border>
     </Design.PreviewWith>
 
-    <Style Selector="controls|HoverButton">
+    <!-- Base style -->
+    <Style Selector="controls|HeaderButton">
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
                 <Button Background="Transparent"
-                        Margin="0, 5">
+                        Margin="0, 5"
+                        BorderThickness="2">
                     <Image Source="{TemplateBinding Icon}"/>
                 </Button>
             </ControlTemplate>
         </Setter>
         <Setter Property="Icon" Value="/Assets/Icons/check.png" />
     </Style>
-    <Style Selector="controls|HoverButton.arrowLeft">
+    
+    <!-- Left arrow -->
+    <Style Selector="controls|HeaderButton.arrowLeft">
         <Setter Property="Icon" Value="/Assets/Icons/arrow-left.png" />
     </Style>
-    <Style Selector="controls|HoverButton.arrowRight">
+    
+    <!-- Right arrow -->
+    <Style Selector="controls|HeaderButton.arrowRight">
         <Setter Property="Icon" Value="/Assets/Icons/arrow-right.png" />
     </Style>
 </Styles>
