Asynchronous collection pulling with task cancellation possibility

--- a/CustomDialog/Views/GeneralView.axaml
+++ b/CustomDialog/Views/GeneralView.axaml
@@ -104,7 +104,8 @@
             <!-- Main area -->
             <Border Grid.Column="1"
                     Background="LightGray">
-                <views:DirectoryView Name="MainBody" />
+                <!--<views:DirectoryView Name="MainBody" />-->
+                <TransitioningContentControl Content="{Binding DVM}" />
             </Border>
         </Grid>
     </Grid>
