--- a/CustomDialog/Views/GeneralView.axaml
+++ b/CustomDialog/Views/GeneralView.axaml
@@ -25,9 +25,11 @@
             <StackPanel Grid.Column="0"
                         Orientation="Horizontal">
                 <tc:HeaderButton Classes="arrowLeft" 
-                                Margin="5,0,0,0"/>
+                                Margin="5,0,0,0"
+                                Command="{Binding DVM.MoveBackCommand}"/>
                 <tc:HeaderButton Classes="arrowRight"
-                                Margin="0,0,5,0"/>
+                                 Margin="0,0,5,0"
+                                 Command="{Binding DVM.MoveForwardCommand}"/>
             </StackPanel>
             <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
